# naijapost-classifier

./: .env_example  README.md  config.py  main.py  pyproject.toml  streamlit_app.py  train.ipynb  utils.py
src/: config.py  main.py  schema.py  utils.py
