[project]
name = "naija_text_classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.118.1",
    "logfire[fastapi]>=4.13.2",
    "mlflow>=3.4.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
